--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
-.depositWithdraw{
+/*.depositWithdraw{
+  display: none;
+}*/
+.clickable{
+  cursor: pointer;
+  color: #0088cc;
+}
+
+.clickable:hover {
+  text-decoration: underline;
+}
+
+.showName{
   display: none;
 }
